Cleanup: Remove unused 'from' parameter in card navigation while preserving search context

--- a/Notes/2025-03-07.md
+++ b/Notes/2025-03-07.md
@@ -15,6 +15,8 @@
 - Added proper error handling and validation in `ScryfallService.getCard`
 - Improved navigation between search results and card details
 - Added search context preservation when viewing card details
+- Removed unused `from` parameter in card navigation while maintaining search query context
+- Fixed search results list sizing and alignment
 
 ### Layout Improvements
 - Fixed search results list sizing and alignment
@@ -34,6 +36,7 @@
    - Added query parameter handling
    - Improved navigation to card details with search context
    - Maintained search state for back navigation
+   - Simplified card navigation by removing unused parameters
 
 2. `CardDetailsView`:
    - Added proper card loading by ID
